# LodDemo

./: .gitmodules  CMakeLists.txt  README.md
core/: .gitignore
core/architecture/: CGameApp.cpp  CGameApp.h  CGameEngine.cpp  CGameEngine.h  CGameEngineAbstractBase.cpp  CGameEngineAbstractBase.h  CGameEngineAutoTest.cpp  CMakeLists.txt  OGeocube.cpp  OGeocube.h  OGeomesh.cpp  OGeomesh.h  PAtmosphere.cpp  PAtmosphere.h  PNode.cpp  PNode.h  UCartesianMath.cpp  UCartesianMath.h  UFramebuffer.h  atmosphere.cpp  atmosphere.h  geocube.cpp  geocube.h
core/architecture/renderer/: appearance.glsl  terrain.frag  upsampling.glsl
core/architecture/renderer/atmosphere/: GroundFromAtmosphere.frag  GroundFromAtmosphere.vert  GroundFromSpace.frag  GroundFromSpace.vert  OceanFromAtmosphere.vert  OceanFromSpace.vert  SkyFromAtmosphereRaytracing.frag
core/architecture/renderer/unused/: terrain.vert  upsampling.glsl
core/atmosphere/: CMakeLists.txt  cmake_source_dir.h  main.cpp  texture_utility.h
core/atmosphere/atmosphereRender/: AtmosphereRayTest.fs  AtmosphereRayTest.vs  GroundFromAtmosphere.frag  GroundFromAtmosphere.vert  GroundFromSpace.frag  GroundFromSpace.vert  SkyFromAtmosphere.frag  SkyFromAtmosphere.vert  SkyFromSpace.frag  SkyFromSpace.vert  SpaceFromAtmosphere.vert  SpaceFromSpace.frag  SpaceFromSpace.vert
core/atmosphere/renderer/: hdr.fs  icosphere.frag  icosphere.vert  icosphere_with_light.frag
core/atmosphere/unused/: Icosphere.cpp
core/curvedSurface/: CGameApp.h  CGameEngine.cpp  CGameEngineAutoTest.cpp  CMakeLists.txt  UCartesianMath.cpp  UCartesianMath.h
core/curvedSurface/renderer/: axis.frag  box.vert  curved.vert
core/icosphere/: CMakeLists.txt  icosphere.h  main.cpp  texture_utility.h
core/icosphere/renderer/: icosphere.frag  icosphere.geom  icosphere.vert  icosphere_line.frag  icosphere_with_light.frag
core/icosphere/unused/: Icosphere.h
core/lod/: AMRMesh.cpp  AMRMesh.h  AMRmesh.cpp  AMRmesh.h  CGameApp.cpp  CGameEngine.cpp  CGameEngine.h  CGameEngineAbstractBase.cpp  CGameEngineAbstractBase.h  CGameEngineAutoTest.cpp  CMakeLists.txt  OGeomesh.cpp  OGeomesh.h  PNode.cpp  PNode.h  UCartesianMath.cpp  UCartesianMath.h  UFramebuffer.cpp  main.cpp
core/lod/compute/: advection.glsl  advection_patch_comm.glsl  draw_a_sphere.glsl  draw_something.glsl  extrapo.glsl  interp.glsl  patch_comm.glsl
core/lod/renderer/: axis.vert  box.vert  field_visualizer.frag  field_visualizer.vert  lod.frag  lod.vert  terrain.vert
core/mipmap/: CMakeLists.txt  main.cpp
core/mipmap/renderer/: tex_interp.glsl
core/planet/: CMakeLists.txt  icosphere.h  main.cpp  mesh.h  model.h  texture_utility.h
core/planet/renderer/: hdr.fs  planet.frag  planet.vert  star.frag  star.vert
core/planet/renderer/debug/: point.frag  point.geom  point.vert  wireframe.frag  wireframe.geom  wireframe.vert
core/quadtree/: CMakeLists.txt  main.cpp
core/quadtree/renderer/: box.vert  crackfixing.glsl  lod.pcolor.frag  lod.vert  terrain.frag  terrain.lighting.frag  terrain.vert  upsampling.glsl
core/quadtreeManaged/: CMakeLists.txt  geomesh.cpp  geomesh.h  grid.cpp  grid.h  lighting.cpp  lighting.h  main.cpp  refcamera.cpp  refcamera.h  texture_utility.cpp  texture_utility.h
core/quadtreeManaged/renderer/: appearance.glsl  appearance.vert  crackfixing.glsl  lod.pcolor.frag  lod.vert  terrain.lighting.frag  terrain.vert  upsampling.glsl
core/quadtreeManaged/renderer/unused/: upsampling.orig.glsl
core/quaternion/: CMakeLists.txt  camera.cpp  camera.h  main.cpp
core/quaternion/renderer/: box.vert  terrain.frag
core/sphericalLandscape/: CMakeLists.txt  atmosphere.cpp  atmosphere.h  geocube.cpp  geocube.h  geomesh.cpp  geomesh.h  grid.cpp  grid.h  main.cpp  refcamera.cpp  texture_utility.cpp  texture_utility.h
core/sphericalLandscape/renderer/: appearance.glsl  box.vert  lod.frag  lod.glsl  lod.vert  terrain.lighting.frag  terrain.vert  upsampling.glsl
core/sphericalLandscape/renderer/atmosphere/: GroundFromAtmosphere.frag  GroundFromAtmosphere.vert  GroundFromSpace.frag  GroundFromSpace.vert  OceanFromAtmosphere.frag  SkyFromAtmosphere.frag  SkyFromAtmosphere.vert  (+4 more)
core/surface/: CMakeLists.txt  main.cpp  shader.bp.frag  shader.geom.glsl  shader.vert
core/textureFetch/: CMakeLists.txt  cmake_source_dir.h  main.cpp  texture_utility.h
core/textureFetch/renderer/: tex_interp.glsl  tex_write.glsl
lib/: glfw3.lib
matlab_codes/: tile_alignment.mlx
modules/: FindASSIMP.cmake  FindGLFW.cmake  FindTIFF.cmake
test/scatter/: RayleighTest.m  RayleighTest2.m  RayleighTest3.m  RayleighTest4.m  getOpticalInterpolant.m  makeOpticalBuffer.m  plotRGB.m  semilogyRGB.m
utility/: boundingbox.cpp  camera.cpp  camera.h  colormap.h  filesystemmonitor.cpp  gui_interface.cpp  gui_interface.h  image_io.cpp  inotify.cpp  isosurface.cpp  refcamera.cpp  refcamera.h  shader.cpp  shader.h  shape.cpp  shape.h  slice.cpp  texture_utility.h
utility/unused/: legacy_camera.cpp  legacy_camera.h
(+1 files in other folders)
